1998-01-23  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* coop-threads.c, threads.h (scm_spawn_thread): New function.
	Can spawn a thread from application C code.

1998-01-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gh.h, gh_data.c (gh_doubles2scm, gh_doubles2dvect,
	gh_doubles2scm): New functions.

1998-01-15  Mark Galassi  <rosalia@nis.lanl.gov>

	* gh_eval.c (gh_eval_str): cleanup -- threw out the old
	commented-out version of gh_eval_str()

Sun Jan  4 02:23:36 1998  Gary Houston  <ghouston@actrix.gen.nz>

	* socket.c (scm_bind): free soka after use.

Sat Jan  3 20:55:07 1998  Gary Houston  <ghouston@actrix.gen.nz>

	* stime.c (tzvar): new variable.
	(setzone, restorezone, scm_localtime, scm_mktime, scm_strftime):
	avoid memory leaks when allocating.

1998-01-03  Jim Blandy  <jimb@totoro.red-bean.com>

	* iselect.h: Some systems require <sys/types.h> to get the FD_SET
	macro definitions.

	* gc.c, tags.h: Doc fixes.

1998-01-02  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* eval.c (macro-eval!): Removed.  This function was a design bug.
	It allowed memoized code to leak out to the scheme level.  Most
	things that you could do with `macro-eval!' can be done with
	`local-eval'.

1997-12-20  Tim Pierce  <twp@skepsis.com>

	* fports.c (scm_pipob): Use scm_generic_fgets for line i/o, since
	scm_fgets now depends on ftell(3) to know how many bytes were
	read.  Sigh.

1997-12-15  Tim Pierce  <twp@skepsis.com>

	* gh_data.c (gh_scm2newstr, gh_get_substr): Use RO macros for
	dealing with strings.

1997-12-13  Tim Pierce  <twp@skepsis.com>

	Make %read-line more suitable for implementing read-line efficiently.
	* ioext.c (scm_read_line): Strip the terminating newline from a
	string, and return a cons of the string and its terminator.

	* fports.c, fports.h (scm_fgets): Add `len' argument.  The length
	of the string that is read is stored in this memory location.
	* ports.c, ports.h (scm_generic_fgets, fgets_void_port): Same.